# MultistageOptimizer

./: .gitignore  CMakeLists.txt  Makefile  MultistageOptimizer.cpp  MultistageOptimizer.rc  MultistageOptimizer.sln  MultistageOptimizer.vcxproj  MultistageOptimizer.vcxproj.filters  README.md  engines.json  open-issues.md  repomix-bridge.md  resource.h  resource1.h  rocket_3stage.json  rocket_4stage.json
.github/workflows/: ci.yml  release.yml
.repomix/: 00_BROWSER_INSTRUCTIONS.md  01_USER_GOAL.md  02_CONTEXT_NOTES.md
backend/: backend_loader.hpp  full_grid_problem.hpp  mso_backend_api.h
backends/cuda/: mso_backend_cuda.cu
config/: benchmark.json  config.json  rocket.json  rocket_4stage.json  rocket_8stage.json
math/: massCalc.hpp  math.hpp  validation.hpp
optimizer/: bounded_compositions.hpp  budget.hpp  reporting.hpp  solver.hpp
read_json/: read_json.hpp
repomix/: repomix-bridge.md
repomix/templates/: 00_BROWSER_INSTRUCTIONS.md  01_REQUEST.md  02_CONTEXT_NOTES.md
rocket_definition/: Engine.hpp  Rocket.cpp  Rocket.hpp  Stage.hpp
tests/: MultistageOptimizerTests.vcxproj  test_backend_cuda.cpp  test_bounded_compositions.cpp  test_budget.cpp  test_budget_config.cpp  test_calcMass.cpp  test_config_parsing.cpp  test_distributions.cpp  test_format_numbers.cpp  test_framework.hpp  test_gpu_memory.cpp  test_json_import.cpp  test_main.cpp  test_math.cpp  test_reporting.cpp  test_rocket_definition.cpp  test_text_table.cpp  test_validation.cpp  test_zoom.cpp
util/: budget_config.hpp  config_parsing.hpp  format_numbers.hpp  gpu_memory.hpp  text_table.hpp
